# cpp-template

./: .gitignore  CMakeLists.txt  logging.hpp  main.cpp
src/: main.cpp
src/game/: game.hpp  gamedata.hpp
src/game/stories/: stories.hpp
src/utils/: arrayPtr.hpp  baseTypes.hpp  customarray.hpp  customvector.hpp  logging.hpp  utils.hpp
